# nirva-monorepo

./: .gitignore  COPYRIGHT  DEPLOYMENT_OPTIONS.md  LEGAL_SUMMARY.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  START_HERE.md  VERCEL_SETUP_COMPLETE.md  deploy-to-vercel.sh  docker-compose.dev.yml  docker-compose.yml
.github/: ISSUE_TEMPLATE.md
.github.backup/workflows/: cd-production.yml  ci.yml  terraform-plan.yml
.github.backup/workflows/shared/: docker-build-push.yml  terraform-deploy.yml
.history/: .vercelignore_20251114231134  ANIMATIONS_IMPLEMENTED_20251114222253.md  CONTRIBUTING_20251114220042.md  DEPLOYMENT_20251114215501.md  DEPLOYMENT_CHECKLIST_20251114221043.md  ENHANCEMENT_PLAN_20251114222327.md  LICENSE_20251114220042  PROJECT_COMPLETE_20251114221419.md  QUICK_DEPLOY_VERCEL_20251114231312.md  QUICK_START_20251114220953.md  README_20251114215259.md  README_20251114215818.md  README_20251114215901.md  README_20251114231332.md  SECURITY_20251114215944.md  VERCEL_DEPLOYMENT_20251114231206.md  docker-compose_20251114214846.yml  docker-compose_20251114223244.yml  vercel_20251114231133.json
.history/.github/: PULL_REQUEST_TEMPLATE_20251114220042.md
.history/backend/: alembic_20251114214545.ini  requirements_20251114214532.txt
.history/backend/alembic/versions/: .gitkeep_20251114220950
.history/backend/app/: main_20251114214455.py  main_20251114220042.py
.history/backend/app/core/: config_20251114214502.py  config_20251114223036.py  config_20251114223038.py  config_20251114223133.py  config_20251114223158.py  config_20251114223201.py  config_20251114223209.py  config_20251114223319.py
.history/backend/app/db/: base_20251114214503.py
.history/backend/app/models/: __init___20251114214508.py
.history/backend/app/schemas/: lead_20251114214520.py
.history/deployment/: README_20251114215330.md
.history/deployment/scripts/: create-ecr-repos_20251114215403.sh  init-terraform-backend_20251114215355.sh
.history/deployment/terraform/: main_20251114214902.tf  variables_20251114214909.tf
.history/deployment/terraform/modules/amplify/: main_20251114215056.tf  outputs_20251114215100.tf
.history/deployment/terraform/modules/ecs/: main_20251114215037.tf
.history/deployment/terraform/modules/monitoring/: main_20251114215117.tf
.history/deployment/terraform/modules/networking/: variables_20251114214933.tf
.history/deployment/terraform/modules/rds/: main_20251114215001.tf  outputs_20251114215007.tf
.history/deployment/terraform/modules/security/: main_20251114214941.tf  outputs_20251114214944.tf  variables_20251114214942.tf
.history/deployment/terraform/modules/waf/: main_20251114215132.tf  outputs_20251114215134.tf  variables_20251114215133.tf
.history/frontend/: .dockerignore_20251114214834  Dockerfile_20251114214833  package_20251114214611.json  package_20251114215815.json  package_20251114222528.json  tailwind.config_20251114214620.ts
.history/frontend/src/app/: globals_20251114214629.css  globals_20251114222159.css  globals_20251114222719.css  globals_20251114231124.css  layout_20251114214627.tsx  layout_20251114220042.tsx  page_20251114214631.tsx  page_20251114222150.tsx  page_20251114224742.tsx  page_20251114225943.tsx
.history/frontend/src/components/: About_20251114224159.tsx  About_20251114224742.tsx  About_20251114224939.tsx  About_20251114224957.tsx  About_20251114231048.tsx  AnimatedCounter_20251114222045.tsx  AnimatedSection_20251114222327.tsx  Footer_20251114214828.tsx  Hero_20251114214647.tsx  Hero_20251114222051.tsx  Hero_20251114222100.tsx  Hero_20251114222327.tsx  Hero_20251114222812.tsx  Hero_20251114222813.tsx  Hero_20251114223319.tsx  Services_20251114214735.tsx  Services_20251114222129.tsx  Services_20251114222141.tsx  Services_20251114222757.tsx  Services_20251114222841.tsx  Services_20251114222844.tsx  Stats_20251114214653.tsx  Stats_20251114222128.tsx  Stats_20251114225746.tsx  StoryStats_20251114225933.tsx  StoryStats_20251114230110.tsx  StoryStats_20251114230318.tsx  StoryStats_20251114230613.tsx  Symptoms_20251114224523.tsx  Testimonials_20251114214753.tsx  Testimonials_20251114223603.tsx  Testimonials_20251114223617.tsx  Testimonials_20251114224159.tsx  Testimonials_20251114230741.tsx  Testimonials_20251114230907.tsx  Testimonials_20251114230914.tsx
backend/: .dockerignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  Dockerfile.dev  MANIFEST.in  MIGRATIONS.md  Makefile  NEON_DATABASE_CONFIG.md  README.md  check_db_schema.py  create_tables.py  migrate.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_migrations.py  setup.cfg  setup.py  test_db_insert.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_15_0133-732a9cab3950_create_leads_table.py  2025_11_15_0414-7b2ab5272dfa_create_applications_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: applications.py  leads.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  application.py  lead.py
backend/app/schemas/: __init__.py  application.py
deployment/scripts/: deploy.sh
deployment/terraform/: outputs.tf  terraform.tfvars.example
deployment/terraform/modules/amplify/: variables.tf
deployment/terraform/modules/ecs/: outputs.tf  variables.tf
deployment/terraform/modules/monitoring/: outputs.tf  variables.tf
deployment/terraform/modules/networking/: main.tf  outputs.tf
deployment/terraform/modules/rds/: variables.tf
frontend/: next.config.js  package-lock.json  package.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/careers/: page.tsx
frontend/src/app/careers/[slug]/: page.tsx
frontend/src/components/: About.tsx  Certificates.tsx  Contact.tsx  Header.tsx  SmoothScroll.tsx  StoryStats.tsx  Symptoms.tsx  Testimonials.tsx
scripts/: local-test.sh  verify-deployment.sh
