[metadata]
name = nirvahatech-backend
version = attr: app.__version__
description = Enterprise-grade DevOps and Cloud Infrastructure Backend API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nirvaha-tech/nirva-monorepo
author = Nirvahatech Engineering Team
author_email = engineering@nirvahatech.com
license = Proprietary
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Software Development :: Libraries :: Application Frameworks
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: FastAPI
    Framework :: AsyncIO
    Operating System :: OS Independent
    Typing :: Typed
keywords =
    fastapi
    api
    backend
    devops
    kubernetes
    cloud-infrastructure

[options]
packages = find:
python_requires = >=3.11
install_requires =
    fastapi==0.109.0
    uvicorn[standard]==0.27.0
    pydantic==2.6.0
    pydantic-settings==2.1.0
    sqlalchemy==2.0.25
    asyncpg==0.29.0
    alembic==1.13.1
    greenlet==3.2.4
    python-dotenv==1.0.0
    email-validator==2.1.0
    psycopg2-binary==2.9.11
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    scripts*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.4.0
    isort>=5.12.0
    pre-commit>=3.3.0
    httpx>=0.24.0
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    httpx>=0.24.0
    faker>=18.0.0
docs =
    mkdocs>=1.5.0
    mkdocs-material>=9.1.0
    mkdocstrings[python]>=0.22.0

[options.entry_points]
console_scripts =
    nirvahatech-api = app.main:main

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    alembic/versions,
    build,
    dist
max-complexity = 10

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
check_untyped_defs = True
strict_optional = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --cov=app --cov-report=term-missing --cov-report=html

[coverage:run]
source = app
omit =
    */tests/*
    */alembic/versions/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

